<resources>
    <string name="app_name">Hacking Tutorial</string>
    <string name="hacking">Hacking</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="button_text">Start Tutorial</string>
    <string name="overview">Hacking has been a part of computing for almost five decades and it is a very broad discipline, which covers a wide range of topics. The first known event of hacking had taken place in 1960 at MIT and at the same time, the term "Hacker" was originated.
Hacking is the act of finding the possible entry points that exist in a computer system or a computer network and finally entering into them. Hacking is usually done to gain unauthorized access to a computer system or a computer network, either to harm the systems or to steal sensitive information available on the computer.
Hacking is usually legal as long as it is being done to find weaknesses in a computer or network system for testing purpose. This sort of hacking is what we call Ethical Hacking.
A computer expert who does the act of hacking is called a "Hacker". Hackers are those who seek knowledge, to understand how systems operate, how they are designed, and then attempt to play with these systems.</string>
    <string name="type_of_hacker">Hackers can be classified into different categories such as white hat, black hat, and grey hat, based on their intent of hacking a system. These different terms come from old Spaghetti Westerns, where the bad guy wears a black cowboy hat and the good guy wears a white hat.White Hat Hackers</string>
    <string name="whiteHatHAcker">White Hat hackers are also known as Ethical Hackers. They never intent to harm a system, rather they try to find out weaknesses in a computer or a network system as a part of penetration testing and vulnerability assessments. Ethical hacking is not illegal and it is one of the demanding jobs available in the IT industry. There are numerous companies that hire ethical hackers for penetration testing and vulnerability assessments.</string>
    <string name="blackHatHacker">Black Hat hackers, also known as crackers, are those who hack in order to gain unauthorized access to a system and harm its operations or steal sensitive information. Black Hat hacking is always illegal because of its bad intent which includes stealing corporate data, violating privacy, damaging the system, blocking network communication, etc.</string>
    <string name="greyHatHacker">Grey hat hackers are a blend of both black hat and white hat hackers. They act without malicious intent but for their fun, they exploit a security weakness in a computer system or network without the owner’s permission or knowledge. Their intent is to bring the weakness to the attention of the owners and getting appreciation or a little bounty from the owners.</string>
    <string name="Miscellaneous_Hackers">Apart from the above well-known classes of hackers, we have the following categories of hackers based on what they hack and how they do it −</string>
    <string name="nav_header_title">Hacking Tutorial</string>
    <string name="nav_header_subtitle">by LEOTECH</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="DDoS">DDoS  means Distributed Denial of Service. This is a type of DOS attack in which multiple compromised systems are used and these systems are often infected with a Trojan. All these infected systems select a target and cause a Denial of Service (DoS) attack.</string>
    <string name="SE">Social engineering is an attack vector that relies heavily on human interaction and often involves tricking people into breaking normal security procedures.</string>
    <string name="VPS"> It stands for Virtual private server (VPS) . It is a virtual machine that is sold as a service by an Internet hosting service. A VPS generally runs its own copy of an operating system, and the customers have superuser-level access to that operating system instance, so they can install almost any software that runs on that OS.</string>
    <string name="HTTP">The Hypertext Transfer Protocol (HTTP) is an application protocol for  collaborative, distributed, hypermedia information systems. HTTP is the basis of data communication for the World Wide Web. The part  Hypertext is a structured text that makes use of logical links (hyperlinks) between nodes containing text.</string>
    <string name="SSH">Secure Shell( SSH)  is a cryptographic i.e, encrypted network protocol that operates at layer 7 of the OSI Model. It allows remote login and other network services to operate in a secure way over an unsecured network. In simple words, SSH is used to connect with Virtual Private Servers.</string>
    <string name="FTP">The FTP or File Transfer Protocol is a standard network protocol that is used to transfer files between a client and server using a computer network.</string>
    <string name="CSS"> Cross-site scripting or XSS is a type of computer security vulnerability usually found in web applications. This vulnerability allows hackers to inject client-side script into web pages which are viewed by other users.</string>
    <string name="Script_Kiddie">A Skiddie or Script Kiddie is an unskilled individual who uses programs or scripts developed by other hackers to attack networks and computer systems even to deface websites.</string>
    <string name="VPN">A Virtual Private Network or VPN helps in extending a private network across a public network, such as Internet. It allows the users to send and receive data across public or shared networks just like their computing devices are directly connected to the private network. Hence this benefit from the security, functionality and management policies of the private network.</string>
    <string name="Nix"> Nix is a very powerful package manager for Linux and other Unix based systems that make package management reproducible and reliable. It provides side-by-side installation of multiple versions of a package, atomic upgrades and rollbacks,  easy setup of build environments and multi-user package management.</string>
    <string name="SQL">Structured Query Language or SQL is a special-purpose programming language designed for managing data contained in a relational database management system (RDBMS), or even for stream processing in a relational data stream management system or RDSMS.</string>
    <string name="FUD">Fully undetectable or FUD in short, can stand for data that had been encrypted, making it appear to be random noise. This term is used in hacker circles to refer something as a clean software to many anti-viruses but still contain some kind  of hacking tool inside it.</string>
    <string name="Trojan">A Trojan or Trojan horse is a type of malware that disguises itself as a legitimate software. these Trojans can be employed by hackers and cyber-thieves trying to gain access to users’ systems. Users are typically tricked  into loading and executing Trojans on their systems.</string>
    <string name="Botnet">A botnet (also known as a zombie army) is a number of Internet computers that, although their owners are unaware of it, have been set up to forward transmissions (including spam or viruses) to other computers on the Internet.</string>
    <string name="SQL_Injection">SQL injection is a famous code injection technique, commonly to attack data-driven applications.In this attack, malicious SQL statements are inserted into an entry field for execution.</string>
    <string name="Root">Root is the Highest permission level on a computer that allows the user to modify anything on the system without a  single restriction.</string>
    <string name="Warez">Warez is copyrighted works distributed without fees or royalties, and may be traded, in general, violation of copyright law. Warez are generally unauthorized releases by organized groups, as opposed to file sharing between friends or large groups of people with similar interest using a darknet. Warez are not usually commercial software counterfeiting.</string>
    <string name="Rootkit">A rootkit is a clandestine computer program designed to provide continued privileged access to a computer while actively hiding its presence. The term rootkit is a connection of the two words “root” and “kit”. This kind of virus can be easily removed by booting the computer in safe mode.</string>
    <string name="Ring0"> Very hard to remove and very rare in the wild, these can require you to format, it’s very hard to remove certain ring0 rootkits without safe mode.</string>
    <string name="IP_Grabber">IP Grabber is a link that grabs victim’s IP when they visit it the particular web address.</string>
    <string name="Malware">‘Malware’ is an umbrella term used to refer to a variety of forms of hostile or intrusive software, including computer viruses, worms, trojan horses, ransomware, spyware, adware, scareware, and other malicious programs. It can take the form of executable code, scripts, active content, and other software.</string>
    <string name="Phreak">Phreak is a slang term coined to describe the activity of a culture of people who  experiment with, explore, or study, telecommunication systems. Phreaker, phreak, or phone phreak are names commonly for and by individuals who participate in phreaking.</string>
    <string name="DOX">Doxing or doxxing, is the Internet-based practice of researching and broadcasting personally identifiable information about an individual. The methods employed to acquire this information include searching publicly available databases and social media websites (like Facebook), hacking, and social engineering. It is closely related to internet vigilantism and hacktivism. Doxing may be carried out for various reasons, including to aid law enforcement, business analysis, extortion, coercion, harassment, online shaming and vigilante justice.</string>
    <string name="Worm">A computer worm is a standalone malware computer program that replicates itself in order to spread to other computers. Often, it uses a computer network to spread itself, relying on security failures on the target computer to access it. Unlike a computer virus, it does not need to attach itself to an existing program.</string>
    <string name="Deface">A website deface is an attack on a site that changes the appearance of the site or a certain web page or technically when a hacker replaces the index file with their own one.</string>
    <string name="Keylogger"> Keylogger is a computer program that records every keystroke made by a computer user, especially in order to gain fraudulent access to passwords and other confidential information.</string>
    <string name="Rat">A remote administration tool (RAT) is a piece of software that allows a remote “operator” to control a system as if he has physical access to that system. While desktop sharing and remote administration have many legal uses, “RAT” software is usually associated with criminal or malicious activity.</string>
    <string name="boundary_line_image">boundary_line</string>
    <string name="footprinting">Footprinting</string>
    <string name="footprinting_text">Footprinting (also known as reconnaissance) is the technique used for gathering information about computer systems and the entities they belong to. To get this information, a hacker might use various tools and technologies. This information is very useful to a hacker who is trying to crack a whole system.[1]

When used in the computer security lexicon, "Footprinting" generally refers to one of the pre-attack phases; tasks performed prior to doing the actual attack. Some of the tools used for Footprinting are Sam Spade, nslookup, traceroute, Nmap and neotrace</string>
</resources>