<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FootPrinting"
    android:background="@drawable/side_nav_bar">

    <ImageView
        android:id="@+id/imageView22"
        android:layout_height="5dp"
        android:layout_width="wrap_content"
        android:contentDescription="@string/boundary_line_image"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/horizontal_line"
        tools:layout_editor_absoluteX="0dp"
        />

    <TextView
        android:id="@+id/skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView22"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:text="@string/footprinting"
        android:textColor="#000000"
        android:textSize="@dimen/HeadingSize" />

    <ImageView
        android:id="@+id/imageView23"
        android:contentDescription="@string/boundary_line_image"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_below="@id/skills"
        android:layout_height="5dp"
        android:background="@drawable/horizontal_line"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView23"
        android:layout_marginTop="2dp"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/TextSize"
        android:text="@string/footprinting_text"/>

</RelativeLayout>